--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.10"
 Jinja2 = "^3.1.2"
 pydantic = "^1.9.2"
 pygnmi = "^0.8.9"
+PyYAML = "^6.0"
+setuptools = "^65.2.0"
 
 [tool.poetry.dev-dependencies]
 
