--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pydantic = "^1.9.2"
 pygnmi = "^0.8.9"
 PyYAML = "^6.0"
 setuptools = "^65.2.0"
+click = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
 
